210963a get minor wording and spacing fixes + contact image

--- a/assets/style/screens.css
+++ b/assets/style/screens.css
@@ -10,6 +10,7 @@
     padding-inline-start: unset;
     display:        grid;
     justify-content: center;
+    margin:         0em;
     padding:        4em  0em;
     gap:            4em;
 }
